# ai-trip

./: .dockerignore  .env.example  .flake8  .gitignore  .taskmasterconfig  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  task-manager-output
app/: main.py
app/api/: dependencies.py
app/api/routers/: __init__.py  admin.py  health.py  telegram.py
app/core/: config.py  container.py  errors.py  middleware.py
app/tests/: test_main.py
app/utils/: README.md  colored_log_example.py  logger.py  middleware_logs.py
scripts/: prd.txt  task-complexity-report.json
