[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "japan-honeymoon-travel-assistant"
version = "0.1.0"
description = "A Telegram bot providing comprehensive travel assistance for honeymooners in Japan"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Santiago Szteren", email = "santisz@example.com"},
]

dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "python-telegram-bot>=20.7",
    "httpx>=0.26.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=term-missing"

[tool.uv]
lockfile = "requirements.lock"
python-preference = "3.11" 